# extract_mkv_k4a

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  annotations_processed.csv  annotations_trial_1-6.csv  annotations_trial_7,8,11.csv  atlas_workflow_annotations_1401_11:48.csv  atlas_workflow_annotations_1401_11_48.csv  conanfile.py  daniel_export.csv  phase stats.ipynb  rebuild.sh
.ipynb_checkpoints/: phase stats-checkpoint.ipynb
config/: atlas_calib.yml  bodytracking.yml  calib.yml  config.yml  debug.yml  gms.yml  pcpd.yml  trs.yml
docker/base/: Dockerfile
docker/run/: Dockerfile
extract_mkv/: CMakeLists.txt
extract_mkv/include/: extract_mkv_k4a.h  timesync.h
extract_mkv/src/: extract_mkv_k4a.cpp  main.cpp  python_interface.cpp  timesync.cpp  transformation_helpers.cpp
include/: thread_pool.hpp
include/extract_mkv/: export.h  extract_mkv_k4a.h  filesystem.h  h264.h  kinect4azure_capture_wrapper.h  pcpd_file_exporter.h  timesync.h  transformation_helpers.h  utils.h
modules/: select_compute_arch.cmake
modules/ArchitectureFlags/: CMakeHostSystemInformationExtra.cmake
modules/ArchitectureFlags/CMakeHostSystemInformationExtra/: CheckCPUFeature.cmake  win32_cpufeatures.c
scripts/: calibrations.py  color_annotation_export.py  color_export_tony.py  color_frames.py  color_video.py  covering_images.py  entrypoint.sh  export_calibrations.py  midi_timecode.py  preprocess_annotations.py  video_preview_export.py
src/: CMakeLists.txt  extract_mkv_k4a.cpp  extract_mkv_k4a.h  extract_timestamps.cpp  h264.cpp  h264_decode.cpp  kinect4azure_capture_wrapper.cpp  main.cpp  mkvinfo.cpp  pcpd_file_exporter.cpp  python_interface.cpp  timesync.cpp  timesync.h  transformation_helpers.cpp  transformation_helpers.h
test_data/: camera_calibration.yml  depth_frame_0.tiff  depth_frame_1.tiff  depth_frame_10.tiff  depth_frame_2.tiff  depth_frame_3.tiff  depth_frame_4.tiff  depth_frame_5.tiff  depth_frame_6.tiff  depth_frame_7.tiff  depth_frame_8.tiff  depth_frame_9.tiff
tests/: CMakeLists.txt  k4a.cpp
